src/objects/Chat_Conversation__c.object
<CustomObject>
    <description>Conversations over chat messaging.</description>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <formula>Agent__r.FirstName + &apos; &apos; +  Agent__r.LastName</formula>
        <label>Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC user involved in the conversation.</description>
        <inlineHelpText>SFDC user involved in the conversation.</inlineHelpText>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ChatConversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact involved in the conversation.</description>
        <inlineHelpText>Contact involved in the conversation.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Chat Conversations</relationshipLabel>
        <relationshipName>Chat_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conversation__c</fullName>
        <description>Actual conversation between user and contact/anonymous visitor.</description>
        <inlineHelpText>Actual conversation between user and contact/anonymous visitor.</inlineHelpText>
        <label>Conversation</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead involved in a chat conversation.</description>
        <inlineHelpText>Lead involved in a chat conversation.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Chat Conversations</relationshipLabel>
        <relationshipName>Chat_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Message posted by individual involved in conversation.</description>
        <inlineHelpText>Message posted by individual involved in conversation.</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Shows the status of conversation.</description>
        <inlineHelpText>Shows the status of conversation.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ended by Agent</fullName>
                </value>
                <value>
                    <fullName>Inititated</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Ended by Visitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Field__c</fullName>
        <label>Test Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Salesforce user involved in this conversation.</description>
        <inlineHelpText>Salesforce user involved in this conversation.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Chat_Conversations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visitor_Name__c</fullName>
        <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName +  Lead__r.FirstName + &apos; &apos; + Lead__r.LastName</formula>
        <label>Visitor Name</label>
        <type>Text</type>
    </fields>
    <label>Chat Conversation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Conv-{000000}</displayFormat>
        <label>Chat Conversation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>